[Example] UI update for Facial Landmark Detection

--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -220,7 +220,7 @@ section {
   padding: 85px 0;
 }
 
-#imageclassification section, #posenet section, #semanticsegmentation section, #objectdetection section, #superresolution section {
+#imageclassification section, #posenet section, #semanticsegmentation section, #objectdetection section, #superresolution section, #faciallandmarkdetection section {
   padding: 0px 0;
 }
 
@@ -2231,31 +2231,32 @@ button.xclose {
   display: none;
 }
 
-#objectdetection .item {
+#objectdetection .item, #faciallandmarkdetection .item {
   border: 0px;
   background-image: none;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 
-#objectdetection .inner {
+#objectdetection .inner, #faciallandmarkdetection .inner {
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 
-#objectdetection #canvasshow {
+#objectdetection #canvasshow, #faciallandmarkdetection #canvasshow {
   padding: 0;
   margin: 0;
   max-width: 80%;
 }
 
-#objectdetection #inference {
-  margin-bottom: -9px;
+#objectdetection #inference, #faciallandmarkdetection #inference {
+  margin-top: 15px;
+  margin-bottom: -11px;
 }
 
-#objectdetection #inference {
+#objectdetection #inference, #faciallandmarkdetection #inference {
   height: 2rem;
 }
 
-#objectdetection #fps {
+#objectdetection #fps, #faciallandmarkdetection #fps {
   position: relative;
   top: -1.7rem;
   left: 8.8rem;
@@ -2263,7 +2264,7 @@ button.xclose {
   padding: 4px 10px 2px 10px;
 }
 
-#objectdetection #fps.fullscreen {
+#objectdetection #fps.fullscreen, #faciallandmarkdetection #fps.fullscreen {
   display: inline-block;
   position: fixed;
   left: auto !important;
@@ -2271,20 +2272,20 @@ button.xclose {
   top: 2rem;
 }
 
-#objectdetection #fullscreen i svg {
+#objectdetection #fullscreen i svg, #faciallandmarkdetection #fullscreen i svg {
   top: -4.5rem;
   left: 70%;
 }
 
-#objectdetection #fullscreen i.fullscreen svg {
+#objectdetection #fullscreen i.fullscreen svg, #faciallandmarkdetection #fullscreen i.fullscreen svg {
   top: 2.2rem;
 }
 
-#objectdetection #cameratab {
+#objectdetection #cameratab, #faciallandmarkdetection #cameratab {
   height: 0px;
 }
 
-#objectdetection #inference.fullscreen {
+#objectdetection #inference.fullscreen, #faciallandmarkdetection #inference.fullscreen {
   width: auto !important;
   background-color: transparent;
   top: 6rem;
@@ -2292,16 +2293,16 @@ button.xclose {
 
 @media (max-width: 768px) {
   
-  #objectdetection #canvasshow {
+  #objectdetection #canvasshow, #faciallandmarkdetection #canvasshow {
     max-width: 100%;
   }
 
-  #objectdetection #fullscreen i svg {
+  #objectdetection #fullscreen i svg, #faciallandmarkdetection #fullscreen i svg {
     top: -4.5rem;
     left: 85%;
   }
 
-  #objectdetection #inference.fullscreen {
+  #objectdetection #inference.fullscreen, #faciallandmarkdetection #inference.fullscreen {
     right: 2rem;
     top: 6.3rem;
   }
@@ -2357,6 +2358,22 @@ button.xclose {
   #superresolution canvas {
     width: 75vw;
   }
+}
+
+#faciallandmarkdetection #l-face_landmark_tflite {
+  color: rgba(255, 255, 255, 1.0);
+  background-color: rgba(25, 190, 225, 0.8);
+  border: 1px solid rgba(25, 190, 225, 0.9);
+  padding: 0px 6px;
+}
+
+#faciallandmarkdetection #l-face_landmark_tflite:hover {
+  background-color: rgba(25, 190, 225, 0.9);
+  border: 1px solid rgba(25, 190, 225, 1.0);
+}
+
+#faciallandmarkdetection #image, #faciallandmarkdetection #video, #faciallandmarkdetection #canvas1 {
+  display: none;
 }
 
 /* 
