[exmaple] fix jitter issue for inference time

--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -1104,6 +1104,7 @@ footer {
 #inferenceresult th,
 #inferenceresult td {
   font-weight: 200;
+  min-width: 80px;
 }
 
 .prefer label {
@@ -2647,3 +2648,4 @@ button.xclose {
 .backendtooltip {
   text-align: left;
 }
+
