--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -1185,6 +1185,9 @@ footer {
 .ir {
   color: rgba(25, 190, 225, 1.0);
   text-transform: lowercase;
+  min-width: 80px;
+  display: inline-block;
+  text-align: right;
 }
 
 .item {
