--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -1156,12 +1156,16 @@ footer {
 }
 
 .webml-status-true {
-  margin-left: -6px;
+  margin-left: -5px;
   background: transparent;
   color: rgba(0, 0, 0, 0.8);
   border: 1px solid rgba(255, 111, 97, 0.9);
   display: inline-block;
   padding: 0.2rem 0.5rem;
+}
+
+.webml-status-true {
+  border-left: 0px;
 }
 
 .webml-status-true:hover {
