--- a/netron/source/css/view.css
+++ b/netron/source/css/view.css
@@ -21,15 +21,16 @@ body {
 
 #webnn {
   text-align: center;
-  padding: 1rem 1rem;
+  padding: 3rem 0.6rem;
   position: fixed;
-  width: 100%;
+  width: 50vw;
+  height: 100%;
   top: 0;
   left: 0;
   z-index: 1000;
-  border-bottom: 1px solid rgba(255, 78, 132, 0.3);
-  box-shadow:0 0 2px 2px rgba(255, 78, 132, 0.1);
-  background: rgba(255, 255, 255, 0.9);
+  border-right: 1px solid rgba(255, 78, 132, 0.2);
+  box-shadow:0 0 2px 2px rgba(255, 78, 132, 0.05);
+  background: rgba(255, 255, 255, 0.8);
 }
 
 #webnn h3 {
@@ -92,11 +93,8 @@ body {
 }
 
 .flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-align: center;
-    margin: 0 2rem;
+    margin: 0rem auto;
     z-index: 1001;
 }
 
@@ -107,8 +105,7 @@ body {
 
 .webnnbadge {
     text-align: center;
-    margin: 0 auto;
-    max-width: 40vw;
+    margin: 1rem auto;
 }
 
 .node,
@@ -119,11 +116,10 @@ body {
 .table-wrapper {
   text-align: center;
   margin: auto;
-  max-height: 30vh;
   overflow: auto;
-  min-width: 56vw;
+  min-width: 100%;
   z-index: 1002;
-  background: rgba(255, 255, 255, 0.9);
+  background: transparent;
 }
 
 #toolbar {
