--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -1725,6 +1725,16 @@ button.xclose {
   margin-bottom: 0.5rem;
 }
 
+#posenet #canvasvideo.fullscreen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 402;
+  margin: 0;
+}
+
 #posenet #canvasvideo {
   width: 640px;
   height: 480px;
