update the jQuery to 3.6.4

--- a/test/tools/workload-toolkit/static/template/check-report-template.html
+++ b/test/tools/workload-toolkit/static/template/check-report-template.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Check Report</title>
-    <script src='../../static/lib/jquery/jquery.min.js'></script>
-    <script src='../../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
+    <script src='../../static/lib/jquery/'></script>
+    <script src='../../static/lib/jquery/jquery-migrate-3.4.1.min.js'></script>
     <style>
       body {font-size: 10px; font-family: arial;}
       table {border-collapse: collapse;}
