--- a/test/tools/workload-toolkit/static/template/check-report-template.html
+++ b/test/tools/workload-toolkit/static/template/check-report-template.html
@@ -1,17 +1,29 @@
 <!doctype html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Check Report</title>
-    <script src='../../static/lib/jquery/'></script>
-    <script src='../../static/lib/jquery/jquery-migrate-3.4.1.min.js'></script>
-    <style>
-      body {font-size: 10px; font-family: arial;}
-      table {border-collapse: collapse;}
-      h2 {text-align:center}
-    </style>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Check Report</title>
+  <script src='../../static/lib/jquery/jquery-3.6.4.min.js'></script>
+  <script src='../../static/lib/jquery/jquery-migrate-3.4.1.min.js'></script>
+  <style>
+    body {
+      font-size: 10px;
+      font-family: arial;
+    }
+
+    table {
+      border-collapse: collapse;
+    }
+
+    h2 {
+      text-align: center
+    }
+  </style>
+</head>
+
+<body>
+</body>
+
 </html>
